// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetFieldLabel conflicts with an existing {name}Id on target object metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldNameBisId" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldNameBisId" is not available as it is already used by another field",
                "value": "fieldNameBisId",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "c824c6bc-d036-4d85-a495-e61e6e97644d",
              "name": "fieldNameBisId",
              "objectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetFieldLabel conflicts with an existing field on target object metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldName" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldName" is not available as it is already used by another field",
                "value": "fieldName",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "71aab37e-0e15-4df1-bcf0-e5355940a0d8",
              "name": "fieldName",
              "objectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetFieldLabel contains only whitespace 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too short",
                "userFriendlyMessage": "Name is too short",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "ca6eb97e-367a-48a0-a70b-8ccdad83a02c",
              "name": "",
              "objectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetFieldLabel exceeds maximum length 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too long",
                "userFriendlyMessage": "Name is too long",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "50200c9d-7916-4834-9ebf-561bc4610c53",
              "name": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              "objectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetFieldLabel is empty 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too short",
                "userFriendlyMessage": "Name is too short",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "2f2fd067-e909-40d1-9f15-b4f48957cd1e",
              "name": "",
              "objectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when targetObjectMetadataId is unknown 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Object metadata relation target not found for relation creation payload",
                "userFriendlyMessage": "Object targeted by field to create not found",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": "6b5911fc-689b-4183-8b36-021598c8bed4",
                  "type": "MANY_TO_ONE",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when type is a wrong value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid {"targetFieldLabel":"defaultTargetFieldLabel","type":"wrong","targetObjectMetadataId":"fec8fe25-912f-4b88-bf76-7763b6f9b041","targetFieldIcon":"IconBuildingSkyscraper"}",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
                  "type": "wrong",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE (relationCreationPayload) when type is not provided 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid {"targetFieldLabel":"defaultTargetFieldLabel","targetObjectMetadataId":"fec8fe25-912f-4b88-bf76-7763b6f9b041","targetFieldIcon":"IconBuildingSkyscraper"}",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE when {name}Id is already used 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "62bc9fa2-10ba-4ce0-98d5-120d0a5747f8",
              "name": "IDX_747db609dd2bb7abe30d5d1926c",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldNameBisId" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldNameBisId" is not available as it is already used by another field",
                "value": "fieldNameBisId",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "42ca7efa-10f2-4af6-b909-f59f7bd1419a",
              "name": "fieldNameBisId",
              "objectMetadataId": "5d8f1752-f02c-4f30-b274-65bfacaaa51c",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation MANY_TO_ONE when target and source are the same object and name are the same 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid {"targetFieldLabel":"Relation Name","type":"MANY_TO_ONE","targetObjectMetadataId":"","targetFieldIcon":"IconBuildingSkyscraper"}",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "Relation Name",
                  "targetObjectMetadataId": "",
                  "type": "MANY_TO_ONE",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetFieldLabel conflicts with an existing {name}Id on target object metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "c41e1f4a-45b1-4ec9-8392-cbebdee9643e",
              "name": "IDX_28fc32819c3dc0ec7c8594219fc",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldNameBisId" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldNameBisId" is not available as it is already used by another field",
                "value": "fieldNameBisId",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "6e693e26-b909-4480-a355-791663fadab5",
              "name": "fieldNameBisId",
              "objectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetFieldLabel conflicts with an existing field on target object metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "a9dafe63-75a4-43bd-ba87-8f745c01b73a",
              "name": "IDX_e19260dc9ba8bb2ac7c39c6fcfd",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldName" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldName" is not available as it is already used by another field",
                "value": "fieldName",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "4961513b-4d23-4752-b2fb-15602c495663",
              "name": "fieldName",
              "objectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetFieldLabel contains only whitespace 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "1b8b3c34-1240-4e86-9cc4-916951063cea",
              "name": "IDX_78587d9d07f2ad40242e070725f",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too short",
                "userFriendlyMessage": "Name is too short",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "7925a241-f31a-43ad-8521-9ca31f7996a9",
              "name": "",
              "objectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetFieldLabel exceeds maximum length 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "790261e7-62cb-4e56-a652-28200c0a5956",
              "name": "IDX_94535ac037cc2cd5eb316e87a54",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too long",
                "userFriendlyMessage": "Name is too long",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "3c770da5-71e6-4bc7-a604-adcd1ca8ee68",
              "name": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              "objectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetFieldLabel is empty 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [
          {
            "errors": [
              {
                "code": "INDEX_FIELD_NOT_FOUND",
                "message": "Could not find index field related field metadata",
                "userFriendlyMessage": "Field referenced in index does not exist",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "5e3f48bf-7606-4d7a-8f54-02e58cffb6fb",
              "name": "IDX_78587d9d07f2ad40242e070725f",
            },
            "status": "fail",
            "type": "create_index",
          },
        ],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is too short",
                "userFriendlyMessage": "Name is too short",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "ea601bdd-c920-4703-8eb5-c7eeae2dab97",
              "name": "",
              "objectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when targetObjectMetadataId is unknown 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Object metadata relation target not found for relation creation payload",
                "userFriendlyMessage": "Object targeted by field to create not found",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": "6b5911fc-689b-4183-8b36-021598c8bed4",
                  "type": "ONE_TO_MANY",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when type is a wrong value 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid {"targetFieldLabel":"defaultTargetFieldLabel","type":"wrong","targetObjectMetadataId":"fec8fe25-912f-4b88-bf76-7763b6f9b041","targetFieldIcon":"IconBuildingSkyscraper"}",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
                  "type": "wrong",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY (relationCreationPayload) when type is not provided 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid {"targetFieldLabel":"defaultTargetFieldLabel","targetObjectMetadataId":"fec8fe25-912f-4b88-bf76-7763b6f9b041","targetFieldIcon":"IconBuildingSkyscraper"}",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "defaultTargetFieldLabel",
                  "targetObjectMetadataId": "fec8fe25-912f-4b88-bf76-7763b6f9b041",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY when {name}Id is already used 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "fieldNameBisId" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "fieldNameBisId" is not available as it is already used by another field",
                "value": "fieldNameBisId",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": "179a0540-247d-49f4-8c57-b08f3bd85669",
              "name": "fieldNameBisId",
              "objectMetadataId": "5d8f1752-f02c-4f30-b274-65bfacaaa51c",
            },
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Field metadata relation creation should fail relation ONE_TO_MANY when target and source are the same object and name are the same 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "errors": {
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_METADATA_RELATION_MALFORMED",
                "message": "Relation creation payload is invalid {"targetFieldLabel":"Relation Name","type":"ONE_TO_MANY","targetObjectMetadataId":"","targetFieldIcon":"IconBuildingSkyscraper"}",
                "userFriendlyMessage": "Invalid relation creation payload",
                "value": {
                  "targetFieldIcon": "IconBuildingSkyscraper",
                  "targetFieldLabel": "Relation Name",
                  "targetObjectMetadataId": "",
                  "type": "ONE_TO_MANY",
                },
              },
            ],
            "flatEntityMinimalInformation": {},
            "type": "create_field",
          },
        ],
        "view": [],
        "viewField": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;
